# pixelforge-ai

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  ROADMAP.md
backend/: Makefile  README.md  pyproject.toml
backend/src/pixelforge/: __init__.py  cli.py  main.py
backend/src/pixelforge/agents/: __init__.py  animation.py  art_director.py  base.py  composition.py  intent.py  lighting.py  material.py  registry.py  runtime.py  silhouette.py
backend/src/pixelforge/animation/: actions.py  assembly.py  sequence.py
backend/src/pixelforge/api/: state.py
backend/src/pixelforge/config/: __init__.py  settings.py
backend/src/pixelforge/core/: errors.py  logging_setup.py  models.py  queue.py  scene_graph.py
backend/src/pixelforge/dataset/: __init__.py  builder.py  caption.py  models.py  phash.py  trainer.py
backend/src/pixelforge/exporters/: aseprite.py  base.py  engines.py  godot_tileset.py  registry.py  standard.py  tiled_tileset.py  wang_blob.py
backend/src/pixelforge/generation/: benchmark.py  pipeline.py  plan_compiler.py  prompt_builder.py  tileize.py
backend/src/pixelforge/memory/: __init__.py  drift.py  embeddings.py  models.py  service.py  store.py
backend/src/pixelforge/models_manager/: device.py
backend/src/pixelforge/modes/: __init__.py  registry.py
backend/src/pixelforge/palettes/: __init__.py  analysis.py  color_math.py  io.py  model.py  presets.py  quantize.py  service.py
backend/src/pixelforge/pixelize/: __init__.py  cleanup.py  grid_snap.py
backend/src/pixelforge/qa/: __init__.py  (+7 more)
backend/tests/: conftest.py  test_agents_full.py  test_animation.py  test_animation_sequence.py  test_api.py  test_aseprite.py  test_benchmark.py  test_cli.py  test_color_math.py  test_dataset.py  test_engine_tileset.py  test_exporters.py  test_flux_config.py  test_golden.py  test_memory.py  test_palette_analysis.py  test_palettes.py  test_pipeline.py  test_pixelize.py  test_planning.py  test_plugins.py  test_project_bundle.py  test_qa.py  test_queue.py  test_repair_loop.py  test_scene_graph.py  test_tileset.py  test_tiling.py  test_vlm_critic.py
backend/tests/golden/: walk.aseprite
examples/plugins/pixelforge-hello/: pyproject.toml
pixel-art-study-lab/: .gitignore  README.md  pyproject.toml  sources.example.toml
pixel-art-study-lab/studylab/: __init__.py  backup.py  cli.py  config.py  db.py  dedup.py  demo.py  hashing.py  importer.py  logging_setup.py  provenance.py  search.py  tagger.py  webapp.py
pixel-art-study-lab/studylab/analysis/: __init__.py  critique.py  embed.py  llm_digest.py  notes.py  palette.py  pixelart.py  spritesheet.py  vlm.py
pixel-art-study-lab/studylab/scraper/: __init__.py  allowlist.py  archive.py  direct.py  fetch.py  models.py  robots.py  runner.py  wikimedia.py
pixel-art-study-lab/tests/: conftest.py  test_analysis.py  test_archive.py  test_backup.py  test_dedup.py  test_importer.py  test_provenance.py  test_scraper.py  test_search_tagger.py  test_webapp.py
(+118 files in other folders)
