[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-art-study-lab"
version = "0.1.0"
description = "Local-first lab for collecting legally-usable pixel-art references and studying technique."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pillow>=10",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
studylab = "studylab.cli:main"

[tool.setuptools.packages.find]
include = ["studylab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
